<resources>
    <string name="app_name">TopsedTest</string>
    <string name="google_maps_key">AIzaSyCJBRGX_q__nNv1Wfr50kS1oew1RI-gBNE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="digital">Digital</string>
    <string name="map">Map</string>
    <string name="waiting_for_gps_signal_d" translatable="false">Waiting for GPS Signal %1$d&#65130;</string>
    <string name="total">Total</string>
    <string name="average">Average</string>
    <string name="top">Top</string>
    <string name="start_stop_button">start stop button</string>
    <string name="bg_permission_message">To show the speed provide Location permission</string>
    <string name="permission_summary">App will not record your location when you stop the app.</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="need_your_bg_location_permission">App needs location permission to show your speed</string>
    <string name="location_permission">Location Permission</string>
    <string name="grant_access">Grant Access</string>
    <string name="stop_ride">Stop Ride</string>
    <string name="stop">Stop</string>
    <string name="no">No</string>
    <string name="distance_text">Distance</string>
</resources>