<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarSpeed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@drawable/blur_meter_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab_layout">

        <LinearLayout
            android:id="@+id/loadingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/loadingText"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/waiting_for_gps_signal_d" />

            <ProgressBar
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="4dp"
                android:indeterminateTint="@color/purple_200" />

        </LinearLayout>

        <com.example.topsedtest.customs.speedyview.SpeedyView
            android:id="@+id/arcProgress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            app:layout_constraintDimensionRatio="1:1"
            custom:borderColor="@color/arcUnfinishedColor"
            custom:borderSize="8dp"
            custom:fillColor="@color/purple_500"
            custom:maxSpeed="140"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!--<TextView
            android:id="@+id/currentSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/digital"
            android:gravity="center"
            android:text=""
            android:textColor="@color/purple_500"
            android:textSize="100sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/currentSpeedUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/currentSpeed"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=""
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/currentSpeed"
            app:layout_constraintBottom_toBottomOf="@id/currentSpeed"/>-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/fab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintTop_toBottomOf="@id/toolbarSpeed">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:contentDescription="@string/start_stop_button"
            android:src="@drawable/ic_pause"
            app:backgroundTint="@color/pauseOrange"
            app:tint="#FFFFFF"
            custom:fabSize="auto" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:contentDescription="@string/start_stop_button"
            android:src="@drawable/ic_play"
            app:backgroundTint="@color/purple_500"
            app:tint="#FFFFFF"
            custom:fabSize="auto" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:contentDescription="@string/start_stop_button"
            android:src="@drawable/ic_stop"
            app:backgroundTint="@color/stopRed"
            app:tint="#FFFFFF"
            custom:fabSize="auto" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintTop_toBottomOf="@id/fab_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ic_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_timer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintBottom_toTopOf="@id/chronometer"
            tools:ignore="ContentDescription" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ic_timer"
            app:layout_constraintEnd_toEndOf="@id/ic_timer"
            app:layout_constraintTop_toBottomOf="@id/ic_timer"
            app:layout_constraintBottom_toTopOf="@id/tv_timer_label"/>

        <TextView
            android:id="@+id/tv_timer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time"
            android:textSize="14sp"
            android:textColor="@color/divider"
            app:layout_constraintStart_toStartOf="@id/chronometer"
            app:layout_constraintEnd_toEndOf="@id/chronometer"
            app:layout_constraintTop_toBottomOf="@id/chronometer"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="22dp"
            android:background="@color/divider"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".33"/>

        <ImageView
            android:id="@+id/ic_distance"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_location"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintBottom_toTopOf="@id/tv_distance_value"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_distance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="22sp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ic_distance"
            app:layout_constraintEnd_toEndOf="@id/ic_distance"
            app:layout_constraintTop_toBottomOf="@id/ic_distance"
            app:layout_constraintBottom_toTopOf="@id/tv_distance_label"/>

        <TextView
            android:id="@+id/tv_distance_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12sp"
            android:textColor="@color/purple_500"
            app:layout_constraintStart_toEndOf="@id/tv_distance_value"
            app:layout_constraintBottom_toBottomOf="@id/tv_distance_value"/>

        <TextView
            android:id="@+id/tv_distance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_text"
            android:textSize="14sp"
            android:textColor="@color/divider"
            app:layout_constraintStart_toStartOf="@id/tv_distance_value"
            app:layout_constraintEnd_toEndOf="@id/tv_distance_value"
            app:layout_constraintTop_toBottomOf="@id/tv_distance_value"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="22dp"
            android:background="@color/divider"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".66"/>

        <ImageView
            android:id="@+id/ic_speed"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_speedometer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_avg_speed_value"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_avg_speed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="22sp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ic_speed"
            app:layout_constraintEnd_toEndOf="@id/ic_speed"
            app:layout_constraintTop_toBottomOf="@id/ic_speed"
            app:layout_constraintBottom_toTopOf="@id/tv_avg_speed_label"/>

        <TextView
            android:id="@+id/tv_avg_speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12sp"
            android:textColor="@color/purple_500"
            app:layout_constraintStart_toEndOf="@id/tv_avg_speed_value"
            app:layout_constraintBottom_toBottomOf="@id/tv_avg_speed_value"/>

        <TextView
            android:id="@+id/tv_avg_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average"
            android:textSize="14sp"
            android:textColor="@color/divider"
            app:layout_constraintStart_toStartOf="@id/tv_avg_speed_value"
            app:layout_constraintEnd_toEndOf="@id/tv_avg_speed_value"
            app:layout_constraintTop_toBottomOf="@id/tv_avg_speed_value"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
